# bio-rs

./: .gitignore  Cargo.toml  README.md
benches/: salmonella.fasta  seq.rs
rosalind/: Cargo.toml
rosalind/src/: bfil.rs  bphr.rs  dna.rs  fib.rs  fibd.rs  filt.rs  frmt.rs  gc.rs  grph.rs  ini.rs  iprb.rs  kmer.rs  lcsq.rs  lexf.rs  lgis.rs  lia.rs  long.rs  mprt.rs  mrna.rs  orf.rs  pdst.rs  perm.rs  phre.rs  pmch.rs  pper.rs  prot.rs  revc.rs  revp.rs  rna.rs  scsp.rs  seto.rs  sign.rs  splc.rs  sseq.rs  sset.rs  subs.rs  tfsq.rs  tran.rs  tree.rs
src/: bioerror.rs  lib.rs
src/alignment/: assembly.rs  bwt.rs  common.rs  hamming.rs  lcs.rs  mod.rs  overlap.rs  palindrome.rs  protein_motif.rs  substring.rs
src/combinatorics/: kmer.rs  mendelian.rs  mod.rs  permutation.rs
src/components/: amino.rs  codon.rs  dna_nuc.rs  mod.rs  rna_nuc.rs
src/formats/: fasta.rs  fastavec.rs  fastq.rs  fastqvec.rs  genbank.rs  mod.rs
src/genetics/: mendelian.rs  mod.rs  overlap.rs
src/graph/: grapherror.rs  mod.rs  unweighted.rs
src/nucleotide/: dna_nuc.rs  mod.rs
src/sequence/: bytes.rs  dna_seq.rs  errorcorrection.rs  fasta.rs  mod.rs  mutation.rs  orf.rs  protein_seq.rs  rna_seq.rs  seq.rs  translationbuilder.rs  translationtable.rs
src/util/: fibonacci.rs  formatting.rs  math.rs  mod.rs  sets.rs
