[package]
name = "bio"
version = "0.1.0"
authors = ["George Roubos <cowkingdom@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bio"
path = "src/lib.rs"
doctest = false

[dependencies]
ureq = "2.2"
num = "0.4"

[dev-dependencies]
cargo-husky = "1.5"
criterion = "0.3"

[[bench]]
name = "seq"
harness = false

[workspace]
members = ["rosalind"]