[package]
name = "rosalind"
version = "0.1.0"
authors = ["George Roubos <cowkingdom@hotmail.com>"]
edition = "2018"

description = "A bioinformatics and nucleotide sequence analysis library"
repository = "https://github.com/modulated/bio-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bioinformatics", "biology", "dna", "protein"]
categories = ["data structures", "algorithms", "science"]

[dependencies]
bio = {path = "../"}

[[bin]]
name = "dna"
path = "src/dna.rs"
doctest = false
test = false

[[bin]]
name = "rna"
path = "src/rna.rs"
test = false
doctest = false

[[bin]]
name = "revc"
path = "src/revc.rs"
test = false
doctest = false

[[bin]]
name = "fib"
path = "src/fib.rs"
test = false
doctest = false

[[bin]]
name = "iprb"
path = "src/iprb.rs"
test = false
doctest = false

[[bin]]
name = "gc"
path = "src/gc.rs"
test = false
doctest = false

[[bin]]
name = "grph"
path = "src/grph.rs"
test = false
doctest = false

[[bin]]
name = "prot"
path = "src/prot.rs"
test = false
doctest = false

[[bin]]
name = "ham"
path = "src/ham.rs"
test = false
doctest = false

[[bin]]
name = "subs"
path = "src/subs.rs"
test = false
doctest = false

[[bin]]
name = "revp"
path = "src/revp.rs"
test = false
doctest = false

[[bin]]
name = "orf"
path = "src/orf.rs"
test = false
doctest = false

[[bin]]
name = "mrna"
path = "src/mrna.rs"
test = false
doctest = false

[[bin]]
name = "perm"
path = "src/perm.rs"
test = false
doctest = false

[[bin]]
name = "pper"
path = "src/pper.rs"
test = false
doctest = false

[[bin]]
name = "splc"
path = "src/splc.rs"
test = false
doctest = false

[[bin]]
name = "lexf"
path = "src/lexf.rs"
test = false
doctest = false

[[bin]]
name = "tree"
path = "src/tree.rs"
test = false
doctest = false

[[bin]]
name = "kmer"
path = "src/kmer.rs"
test = false
doctest = false

[[bin]]
name = "fibd"
path = "src/fibd.rs"
test = false
doctest = false

[[bin]]
name = "lia"
path = "src/lia.rs"
test = false
doctest = false

[[bin]]
name = "mprt"
path = "src/mprt.rs"
test = false
doctest = false

[[bin]]
name = "sseq"
path = "src/sseq.rs"
test = false
doctest = false

[[bin]]
name = "lcsq"
path = "src/lcsq.rs"
test = false
doctest = false

[[bin]]
name = "scsp"
path = "src/scsp.rs"
test = false
doctest = false

[[bin]]
name = "seto"
path = "src/seto.rs"
test = false
doctest = false

[[bin]]
name = "sset"
path = "src/sset.rs"
test = false
doctest = false