[package]
name = "rosalind"
version = "0.1.0"
authors = ["George Roubos <cowkingdom@hotmail.com>"]
edition = "2018"

description = "Rosalind problems"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bioinformatics", "biology", "dna", "protein"]
categories = ["data structures", "algorithms", "science"]

[dependencies]
bio = {path = "../"}

[[bin]]
name = "dna"
path = "src/dna.rs"
doctest = false
test = false

[[bin]]
name = "rna"
path = "src/rna.rs"

[[bin]]
name = "revc"
path = "src/revc.rs"

[[bin]]
name = "fib"
path = "src/fib.rs"

[[bin]]
name = "iprb"
path = "src/iprb.rs"

[[bin]]
name = "gc"
path = "src/gc.rs"

[[bin]]
name = "grph"
path = "src/grph.rs"

[[bin]]
name = "prot"
path = "src/prot.rs"

[[bin]]
name = "ham"
path = "src/ham.rs"

[[bin]]
name = "subs"
path = "src/subs.rs"

[[bin]]
name = "revp"
path = "src/revp.rs"

[[bin]]
name = "orf"
path = "src/orf.rs"

[[bin]]
name = "mrna"
path = "src/mrna.rs"

[[bin]]
name = "perm"
path = "src/perm.rs"

[[bin]]
name = "pper"
path = "src/pper.rs"

[[bin]]
name = "splc"
path = "src/splc.rs"

[[bin]]
name = "lexf"
path = "src/lexf.rs"

[[bin]]
name = "tree"
path = "src/tree.rs"

[[bin]]
name = "kmer"
path = "src/kmer.rs"

[[bin]]
name = "fibd"
path = "src/fibd.rs"

[[bin]]
name = "lia"
path = "src/lia.rs"

[[bin]]
name = "mprt"
path = "src/mprt.rs"

[[bin]]
name = "sseq"
path = "src/sseq.rs"

[[bin]]
name = "lcsq"
path = "src/lcsq.rs"

[[bin]]
name = "scsp"
path = "src/scsp.rs"

[[bin]]
name = "seto"
path = "src/seto.rs"

[[bin]]
name = "sset"
path = "src/sset.rs"

[[bin]]
name = "pdst"
path = "src/pdst.rs"

[[bin]]
name = "lgis"
path = "src/lgis.rs"

[[bin]]
name = "pmch"
path = "src/pmch.rs"

[[bin]]
name = "tran"
path = "src/tran.rs"

[[bin]]
name = "sign"
path = "src/sign.rs"

[[bin]]
name = "long"
path = "src/long.rs"

[[bin]]
name = "ini"
path = "src/ini.rs"

[[bin]]
name = "frmt"
path = "src/frmt.rs"

[[bin]]
name = "tfsq"
path = "src/tfsq.rs"

[[bin]]
name = "phre"
path = "src/phre.rs"

[[bin]]
name = "filt"
path = "src/filt.rs"

[[bin]]
name = "bphr"
path = "src/bphr.rs"